# chatbot-system

./: .dockerignore  .gitignore  README.md  activate_env.bat  chunk.ipynb  rag.py  requirements.txt  run_docker_compose.bat  run_dockerfile.bat  tree.txt  vector_db.py
.github/workflows/: deploy.yml
_exam/: chunk.ipynb  rag.py
cicd/: Dockerfile  docker-compose.yml
core/: app.py  chunk.ipynb  main.py  pyproject.toml  requirements.txt
core/_exam/: chunk.ipynb  embeddings.py
core/_exam/semantic-router/: rag-pipeline.py
core/common/: calcu_process_time.py  config.py  constant.py
core/embedding/: embedding_adapter.py  embedding_service.py
core/inference/: inference_adapter.py  inference_service.py
core/models/dto/: route.py  router_result_dto.py
core/models/request/: chat_request.py
core/models/response/: chat_response.py  generate_answer_response.py
core/orchestrator/: controller.py  rag_service_v1.py  rag_service_v1_1.py  service.py
core/retrieval/: retrieval_adapter.py  retrieval_service.py
core/router/: routing_service.py  samples.py  sematic_router.py
core/src/: app.py
core/src/api/: router.py
core/src/clients/: db_client.py  qdrant_client.py  redis_client.py
core/src/controller/: chat_controller.py
core/src/models/: document.py  request.py  response.py
core/src/services/: cache_service.py  chat_service.py  inference_service.py  retrieval_service.py
core/src/utils/: logger.py  retry.py
fe-streamlit/: Dockerfile  Hello.py  chatbot_app.py  requirements.txt
semantic-router/: embeddings.py  rag-pipeline.py  router.py  samples.py
(+7 files in other folders)
