[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "numpy==2.3.2",
    "openai==1.97.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "qdrant-client==1.15.0",
    "sentence-transformers==5.0.0",
    "streamlit==1.47.1",
    "uvicorn==0.35.0",
]
